modify div => span

--- a/study01-html-css/SosukeKozawa/html/hamburger.html
+++ b/study01-html-css/SosukeKozawa/html/hamburger.html
@@ -54,10 +54,10 @@
     <button id="button_indexpage_hamburger" class="rounded-full relative">
         <div id="div_indexpage_hamburger_≡"
             class="w-full h-full absolute flex flex-col justify-center items-center viewable">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
         <div id="div_indexpage_hamburger_x" class="w-full h-full absolute flex justify-center items-center unviewable">
             <div>
